objects/DF_16_Leads__c.object
<CustomObject>
    <description>Created to save info of DreamForce Leads</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it&apos;s one of the Pain points of customer.</description>
        <label>CI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>company&apos;s name</description>
        <label>Company</label>
        <length>70</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it&apos;s one of the Pain points of the customer.</description>
        <label>Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it&apos;s one of the Pain points of the customer.</description>
        <label>Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Contains Email info</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Heard_About_AutoRabit__c</fullName>
        <label>Heard About AutoRabit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Some more important information about client.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contains phone no.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pre_Post_Deployments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it&apos;s one of the Pain points of the customer.</description>
        <label>Pre/Post Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <description>How interested client is?</description>
        <label>Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Priority</fullName>
                    <default>true</default>
                    <label>High Priority</label>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>What&apos;s the role of the contact?</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                    <default>true</default>
                    <label>ADM</label>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>ARC</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>MGR (+ TEAM LEAD)</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roll_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it&apos;s one of the Pain points of the customer.</description>
        <label>Roll-Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it&apos;s one of the Pain points of the customer.</description>
        <label>Sandbox Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it&apos;s one of the Pain points of the customer.</description>
        <label>Test Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_to_Contact__c</fullName>
        <description>Time when we must contact the client.</description>
        <label>Time to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                    <default>true</default>
                    <label>Immediately</label>
                </value>
                <value>
                    <fullName>Next Month</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VCS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it&apos;s one of the Pain points of the customer.</description>
        <label>VCS</label>
        <type>Checkbox</type>
    </fields>
    <label>DF&apos;16 Lead</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DF&apos;16 Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>